--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Multi-Angle Video Player</title>
+	<meta name="description" content=" switch between videos without restarting playback ">
+	<meta name="keywords" content="SwitchVideoPlayer, web video player, switching between cameras, playback, timeline, loop video, ">
   <style>
     * {
       margin: 0;
