--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>SwitchPlayer</title>
+	<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎬</text></svg>">
 	<meta name="description" content=" switch between videos without restarting playback ">
 	<meta name="keywords" content="SwitchVideoPlayer, web video player, switching between cameras, playback, timeline, loop video, ">
   <style>
@@ -944,3 +945,4 @@
   </script>
 </body>
 </html>
+
